--- a/myapp/templates/login.html
+++ b/myapp/templates/login.html
@@ -24,8 +24,8 @@
 				<div class="row g-0">
 				<span class="h1 fw-bold mb-0"><marquee>AluminiHub</marquee></span>
 				  <div class="col-md-6 col-lg-5 d-none d-md-block">
-					<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSH7nKXmKWbf7exEPwZv4ztR5YeRzHXk09zGg&usqp=CAU"
-					  alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem; margin-top: 40%; margin-left: 20%;"/>
+					<!-- <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSH7nKXmKWbf7exEPwZv4ztR5YeRzHXk09zGg&usqp=CAU"
+					  alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem; margin-top: 40%; margin-left: 20%;"/> -->
 				  </div>
 				  
 				  <div class="col-md-6 col-lg-7 d-flex align-items-center">
