--- a/myapp/templates/navbar.html
+++ b/myapp/templates/navbar.html
@@ -77,6 +77,7 @@
         }
 
         /* Sidebar Styles */
+        /* !important */
 
         .sidebar-nav {
             position: absolute;
@@ -192,7 +193,7 @@
         <!-- Sidebar -->
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
-                <li class="sidebar-brand">
+                <!-- <li class="sidebar-brand">
                     <a href="#">
                         Start Bootstrap
                     </a>
@@ -218,7 +219,7 @@
                 <li>
                     <a href="#">Contact</a>
                 </li>
-            </ul>
+            </ul> -->
         </div>
         <!-- /#sidebar-wrapper -->
 
