--- a/myapp/templates/signUp.html
+++ b/myapp/templates/signUp.html
@@ -22,8 +22,8 @@
 					<span class="h1 fw-bold mb-0"><marquee>AluminiHub</marquee></span>
 				  <div class="col-md-6 col-lg-5 d-none d-md-block">
 					<div class="image">
-					<!-- <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSH7nKXmKWbf7exEPwZv4ztR5YeRzHXk09zGg&usqp=CAU"
-					  alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem; margin-top: 40%; margin-left: 20%;"/>--></div>
+					<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSH7nKXmKWbf7exEPwZv4ztR5YeRzHXk09zGg&usqp=CAU"
+					  alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem; margin-top: 40%; margin-left: 20%;"/></div>
 				  </div>
 				  <div class="col-md-6 col-lg-7 d-flex align-items-center">
 					<div class="card-body p-4 p-lg-5 text-black">
