--- a/myapp/templates/alumni_login.html
+++ b/myapp/templates/alumni_login.html
@@ -11,33 +11,11 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-<style>
-		body {
-	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-	background-size: 400% 400%;
-	animation: gradient 15s ease infinite;
-	height: 100vh;
-}
-
-	
-
-@keyframes gradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
-}
-</style>
 
 	
 </head>
 <body>
-	<section class="vh-100">
+	<section class="vh-100" style="background-color: #9A616D;">
 		
 		<div class="container py-5 h-100">
 		  <div class="row d-flex justify-content-center align-items-center h-100">
@@ -54,7 +32,7 @@
 					<div class="card-body p-4 p-lg-5 text-black">
 
 
-<form action="/postsignIn/" method="post">
+<form action="/alumni_postsignIn/" method="post">
 	{% csrf_token %}
 	
 	<div class="d-flex align-items-center mb-2 pb-1">
@@ -81,7 +59,7 @@
 	  </div>
 
 	  <!-- <a class="small text-muted" href="#!">Forgot password?</a> -->
-	  <p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account? <a href="{% url 'signup' %}"
+	  <p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account? <a href="{% url 'alumni_signup' %}"
 		  style="color: #393f81;">Register here</a></p>
 	  
 	</form>
