--- a/myapp/templates/alumni_signup.html
+++ b/myapp/templates/alumni_signup.html
@@ -8,34 +8,12 @@
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
-<style>
-	body {
-	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-	background-size: 400% 400%;
-	animation: gradient 15s ease infinite;
-	height: 100vh;
-}
 
-	
-
-@keyframes gradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
-}
-
-</style>
 
 </head>
 <body>
 	
-	<section class="vh-100">
+	<section class="vh-100" style="background-color: #9A616D;">
 		<div class="container py-5 h-100">
 		  <div class="row d-flex justify-content-center align-items-center h-100">
 			<div class="col col-xl-10">
@@ -50,7 +28,7 @@
 				  <div class="col-md-6 col-lg-7 d-flex align-items-center">
 					<div class="card-body p-4 p-lg-5 text-black">
 
-<form action="/postsignUp/" method="post">
+<form action="/alumni_postsignUp/" method="post">
 	{% csrf_token %}
 	<div class="d-flex align-items-center mb-3 pb-1">
 		<i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
