--- a/myapp/templates/welcome_msg.html
+++ b/myapp/templates/welcome_msg.html
@@ -1,28 +1,191 @@
-{% extends 'main.html' %}
-{% block content %}
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <!-- import bootstrap cdn-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <!-- import jquery cdn -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+        </script>
+    <!-- import popper.js cdn -->
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+        </script>
+    <!-- import javascript cdn -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
+        </script>
+</head>
+
+<body>
+    <!-- top navbar -->
+    <nav class="navbar navbar-expand-lg
+navbar-light bg-primary">
+        <a class="navbar-brand" href="#">AlumniHub</a>
+        <!-- hamburger button that toggles the navbar-->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon">
+            </span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="btn btn-danger" href="">Logout</a>
+                </li>
+                <!-- navbar links -->
+
+    </nav>
+    <!-- This container contains the sidebar
+and main content of the page -->
+    <!-- h-100 takes the full height of the body-->
+    <div class="container-fluid p-0">
+
+        <!-- Bootstrap row -->
+        <div class="row" id="body-row">
+            <!-- Sidebar -->
+            <div id="sidebar-container" class="sidebar-expanded d-none d-md-block">
+                <!-- d-* hiddens the Sidebar in smaller devices. Its itens can be kept on the Navbar 'Menu' -->
+                <!-- Bootstrap List Group -->
+                <ul class="list-group">
+                    <!-- Separator with title -->
+
+                    <!-- /END Separator -->
+                    <a href="#" class="bg-dark list-group-item list-group-item-action">
+                        <div class="d-flex w-100 justify-content-start align-items-center">
+                            <span class="fa fa-calendar fa-fw mr-3"></span>
+                            <span class="menu-collapsed">Alumni List</span>
+                        </div>
+                    </a>
+                    <a href="#" class="bg-dark list-group-item list-group-item-action">
+                        <div class="d-flex w-100 justify-content-start align-items-center">
+                            <span class="fa fa-envelope-o fa-fw mr-3"></span>
+                            <span class="menu-collapsed">News & Events</span>
+                        </div>
+                    </a>
+
+                    <a href="#" class="bg-dark list-group-item list-group-item-action">
+                        <div class="d-flex w-100 justify-content-start align-items-center">
+                            <span class="fa fa-envelope-o fa-fw mr-3"></span>
+                            <span class="menu-collapsed">Job Opportunities</span>
+                        </div>
+                    </a>
+
+                    <a href="#" class="bg-dark list-group-item list-group-item-action">
+                        <div class="d-flex w-100 justify-content-start align-items-center">
+                            <span class="fa fa-envelope-o fa-fw mr-3"></span>
+                            <span class="menu-collapsed">Messages</span>
+                        </div>
+                    </a>
+                    <a href="{% url 'profile' session_id %}" class="bg-dark list-group-item list-group-item-action">
+                        <div class="d-flex w-100 justify-content-start align-items-center">
+                            <span class="fa fa-envelope-o fa-fw mr-3"></span>
+                            <span class="menu-collapsed">Profile</span>
+                        </div>
+                    </a>
+
+
+                </ul><!-- List Group END-->
+            </div><!-- sidebar-container END -->
+
+            <!-- MAIN -->
+            <div class="msg">
+                <div class="row">
+                    <div class="col">
+                        <div class="col-md">
+                            <div class="card card-body">
+                                <h4>Hi, {{name}}</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+
+
+        </div><!-- Main Col END -->
+
+    </div><!-- body-row END -->
+
+
+    </div><!-- container -->
+
+
+</body>
+
+
 
 <style>
-    .msg {
-        margin-left: 17%;
-        margin-top: -45%;
+    @import url('https://fonts.googleapis.com/css?family=Montserrat');
+
+    /*-------------------------------- END ----*/
+    #body-row {
+        margin-left: 0;
+        margin-right: 0;
+    }
+
+    #sidebar-container {
+        min-height: 100vh;
+        background-color: #132644;
+        padding: 0;
+        /* flex: unset; */
+    }
+
+    .sidebar-expanded {
+        width: 230px;
+    }
+
+    .sidebar-collapsed {
+        /*width: 60px;*/
+        width: 100px;
+    }
+
+    /* ----------| Menu item*/
+    #sidebar-container .list-group a {
+        height: 50px;
+        color: white;
+    }
+
+    /* ----------| Submenu item*/
+    #sidebar-container .list-group li.list-group-item {
+        background-color: #132644;
+    }
+
+    #sidebar-container .list-group .sidebar-submenu a {
+        height: 45px;
+        padding-left: 30px;
+    }
+
+    .sidebar-submenu {
+        font-size: 0.9rem;
+    }
+
+    /* ----------| Separators */
+    .sidebar-separator-title {
+        background-color: #132644;
+        height: 35px;
+    }
+
+    .sidebar-separator {
+        background-color: #132644;
+        height: 25px;
+    }
+
+    .logo-separator {
+        background-color: #132644;
+        height: 60px;
+    }
+
+    a.bg-dark {
+        background-color: #132644 !important;
     }
 </style>
 
-
-<div class="msg">
-    <div class="row">
-        <div class="col">
-            <div class="col-md">
-                <div class="card card-body">
-                    <p>Hi</p>
-                </div>
-            </div>
-    </div>
-</div>
-</div>
-
-
-
-
-
-{% endblock %}
+</html>
