--- a/myapp/templates/news.html
+++ b/myapp/templates/news.html
@@ -22,10 +22,7 @@
     integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
     </script>
 </head>
-<style>
-  
 
-</style>
 <body>
   <!-- top navbar -->
   <nav class="navbar navbar-expand-lg
@@ -66,7 +63,7 @@ and main content of the page -->
               <span class="menu-collapsed">Alumni List</span>
             </div>
           </a>
-          <a href="{% url 'news' session_id %}" class="bg-dark list-group-item list-group-item-action">
+          <a href="#" class="bg-dark list-group-item list-group-item-action">
             <div class="d-flex w-100 justify-content-start align-items-center">
               <span class="fa fa-envelope-o fa-fw mr-3"></span>
               <span class="menu-collapsed">News & Events</span>
@@ -86,7 +83,7 @@ and main content of the page -->
               <span class="menu-collapsed">Messages</span>
             </div>
           </a>
-          <a href="{% url 'alumni_list' session_id %}" class="bg-dark list-group-item list-group-item-action">
+          <a href="{% url 'profile' session_id %}" class="bg-dark list-group-item list-group-item-action">
             <div class="d-flex w-100 justify-content-start align-items-center">
               <span class="fa fa-envelope-o fa-fw mr-3"></span>
               <span class="menu-collapsed">Profile</span>
@@ -97,54 +94,34 @@ and main content of the page -->
         </ul><!-- List Group END-->
       </div><!-- sidebar-container END -->
 
+
+
       <!-- MAIN -->
       <div class="profile mx-auto">
         <div class="container pt-3">
-          <form action="" method="POST">
-            {% csrf_token %}
-            <div class="form-row">
-              <div class="form-group col-md-6">
-                <label for="firstname">First Name</label>
-                <input type="text" class="form-control" name="firstname" placeholder="First Name">
-              </div>
-              <div class="form-group col-md-6">
-                <label for="inputPassword4">Last Name</label>
-                <input type="text" class="form-control" name="lastname" placeholder="Last Name">
-              </div>
-            </div>
-            <div class="form-group">
-              <label for="batch">Batch</label>
-              <input type="text" class="form-control" name="batch" placeholder="year">
-            </div>
-            <div class="form-group">
-              <label for="rollnumber">Roll Number</label>
-              <input type="text" class="form-control" name="roll" placeholder="Roll Number">
-            </div>
-            <div class="form-group">
-              <label for="rollnumber">Official Email</label>
-              <input type="email" class="form-control" name="oemail" placeholder="official email">
-            </div>
-            <div class="form-group">
-              <label for="rollnumber">Personal Email</label>
-              <input type="email" class="form-control" name="pemail" placeholder="personal email">
-            </div>
-            <div class="
-            form-group">
-              <label for="tel">Phone</label>
-              <input type="tel" name="phone" class="form-control" name="phone" placeholder="Phone No" required>
-            </div>
-            <input type="submit" class="btn btn-primary" name="submit" id="">
-
-
+          <div class="container">
+            <h3>News and Events</h3>
             
-          </form>
-        </div>
-      </div>
 
+                  
+          </div>
+        </div>
+        
+      </div>
+      <div class="profile">
+        <div class="container pt-3">
+          <div class="container">
+            <br>
+      <a class="btn btn-primary btn-lg float-right" href="">Create</a>
+      </div>
+      </div>
+      </div>
+     
 
 
 
     </div><!-- Main Col END -->
+    
 
   </div><!-- body-row END -->
 
