event page work push

--- a/myapp/templates/alumni/alumni_login.html
+++ b/myapp/templates/alumni/alumni_login.html
@@ -3,6 +3,11 @@
 	alert('{{ message }}');
 </script>
 {% endif %}
+{% if mess %}
+<script>
+	alert('{{ mess }}');
+</script>
+{% endif %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
