--- a/myapp/templates/alumni/alumni_mainpage.html
+++ b/myapp/templates/alumni/alumni_mainpage.html
@@ -80,13 +80,13 @@ and main content of the page -->
             </div>
           </a>
 
-          <a href="#" class="bg-dark list-group-item list-group-item-action">
+          <a href="" class="bg-dark list-group-item list-group-item-action">
             <div class="d-flex w-100 justify-content-start align-items-center">
               <span class="fa fa-envelope-o fa-fw mr-3"></span>
               <span class="menu-collapsed">Messages</span>
             </div>
           </a>
-          <a href="" class="bg-dark list-group-item list-group-item-action">
+          <a href="{% url 'alumni_profileset' session_id %}" class="bg-dark list-group-item list-group-item-action">
             <div class="d-flex w-100 justify-content-start align-items-center">
               <span class="fa fa-envelope-o fa-fw mr-3"></span>
               <span class="menu-collapsed">Profile</span>
