--- a/myapp/templates/detail_card.html
+++ b/myapp/templates/detail_card.html
@@ -73,6 +73,7 @@ and main content of the page -->
                             <h5 class="my-3"></h5>
                             <p class="text-muted mb-1">{{roll}}</p>
                             <p class="text-muted mb-4">{{firstname}} {{lastname}}</p>
+                            <p class="text-muted mb-4">  </p>
                             <div class="d-flex justify-content-center mb-2">
                             
                             </div>
