--- a/myapp/templates/alumni/al_event_notify.html
+++ b/myapp/templates/alumni/al_event_notify.html
@@ -61,11 +61,21 @@ navbar-light bg-primary">
         <div class="form-group">
           <label for="exampleInputEmail1">Title</label>
           <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-            placeholder="Enter event title" name="title">
+            placeholder="Enter event title" name="title" required>
         </div>
         <div class="form-group">
           <label for="exampleInputPassword1">Description</label>
-          <textarea class="form-control" name="des" rows="5" id="comment"></textarea>
+          <textarea class="form-control" name="des" rows="5" id="comment" required></textarea>
+        </div>
+        <div class="form-group">
+          <label for="startdate">Start Date</label>
+          <input type="date" class="form-control" id="startdate" aria-describedby="emailHelp"
+            placeholder="Enter event title" name="startdate">
+        </div>
+        <div class="form-group">
+          <label for="exampleInputEmail1">End Date</label>
+          <input type="date" class="form-control" id="enddate" aria-describedby="emailHelp"
+            placeholder="Enter event title" name="enddate">
         </div>
         <div class="form-group">
           <label for="formFileMultiple" class="form-label">Attachment</label>
