--- a/myapp/templates/update_profile.html
+++ b/myapp/templates/update_profile.html
@@ -103,47 +103,58 @@ and main content of the page -->
             <!-- MAIN -->
             <div class="profile mx-auto">
                 <div class="container pt-3">
-                  <form action="" method="POST">
-                    {% csrf_token %}
-                    <div class="form-row">
-                      <div class="form-group col-md-6">
-                        <label for="firstname">First Name</label>
-                        <input type="text" class="form-control" name="firstname" value="{{details.firstname}}">
-                      </div>
-                      <div class="form-group col-md-6">
-                        <label for="inputPassword4">Last Name</label>
-                        <input type="text" class="form-control" name="lastname">
-                      </div>
-                    </div>
-                    <div class="form-group">
-                      <label for="batch">Batch</label>
-                      <input type="text" class="form-control" name="batch">
-                    </div>
-                    <div class="form-group">
-                      <label for="rollnumber">Roll Number</label>
-                      <input type="text" class="form-control" name="roll">
-                    </div>
-                    <div class="form-group">
-                      <label for="rollnumber">Official Email</label>
-                      <input type="email" class="form-control" name="oemail">
-                    </div>
-                    <div class="form-group">
-                      <label for="rollnumber">Personal Email</label>
-                      <input type="email" class="form-control" name="pemail">
-                    </div>
-                    <div class="
-                    form-group">
-                      <label for="tel">Phone</label>
-                      <input type="tel" name="phone" class="form-control" name="phone" required>
-                    </div>
-                    <input type="submit" class="btn btn-primary" name="Update" id="">
-        
-        
+                    <form action="" method="POST">
+                        {% csrf_token %}
+                        <div class="form-row">
+                            <div class="form-group col-md-6">
+                                <label for="firstname">First Name</label>
+                                <input type="text" class="form-control" name="firstname" value="{{details.firstname}}">
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label for="inputPassword4">Last Name</label>
+                                <input type="text" class="form-control" name="lastname" value="{{details.lastname}}">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="batch"><b>Batch</b></label>
+                            <input type="text" class="form-control" name="roll" value="{{details.batch}}">
+                        </div>
                     
-                  </form>
+                        </script>
+                        <div class="form-group">
+                            <label for="rollnumber">Roll Number</label>
+                            <input type="text" class="form-control" name="roll" value="{{details.roll}}">
+                        </div>
+                        <div class="form-group">
+                            <label for="department">Department</label>
+                            <input type="text" class="form-control" name="roll" value="{{details.department}}">
+                        </div>
+                        <div class="form-group">
+                            <label for="rollnumber">Official Email</label>
+                            <input type="email" class="form-control" name="oemail" value="{{details.oemail}}">
+                        </div>
+                        <div class="form-group">
+                            <label for="rollnumber">Personal Email</label>
+                            <input type="email" class="form-control" name="pemail" value="{{details.pmeail}}">
+                        </div>
+                        <div class="
+                    form-group">
+                            <label for="tel">Phone</label>
+                            <input type="tel" name="phone" class="form-control" name="phone" value="{{details.phone}}"
+                                required>
+                        </div>
+                        <div class="form-group">
+                            <label for="workingat"><b>Working At (Mention as NA if not applicable)</b></label>
+                            <input type="text" value="{{details.workingat}}" class="form-control" name="roll" placeholder="Woriking At">
+                        </div>
+                        <input type="submit" class="btn btn-primary" name="Update" id="">
+
+
+
+                    </form>
                 </div>
-              </div>
-            
+            </div>
+
 
 
 
